--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,4 +1,14 @@
-body{
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+a{
+    text-decoration: none;
+}
+
+ul,ol{
+    list-style: none;
+}
+
