--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,14 @@
-body {
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul, ol {
+  list-style: none;
 }/*# sourceMappingURL=main.css.map */
