--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,17 +1,26 @@
-/* roboto-regular - latin */
+/* fraunces-regular - latin */
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: 
-         url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/roboto-v30-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* roboto-500 - latin */
-  @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/roboto-v30-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/roboto-v30-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+     font-family: 'Fraunces';
+     font-style: normal;
+     font-weight: 400;
+     src: url('../fonts/fraunces-v26-latin-regular.eot'); /* IE9 Compat Modes */
+     src: 
+          url('../fonts/fraunces-v26-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/fraunces-v26-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/fraunces-v26-latin-regular.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/fraunces-v26-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/fraunces-v26-latin-regular.svg#Fraunces') format('svg'); /* Legacy iOS */
+   }
+   /* fraunces-500 - latin */
+   @font-face {
+     font-family: 'Fraunces';
+     font-style: normal;
+     font-weight: 500;
+     src: url('../fonts/fraunces-v26-latin-500.eot'); /* IE9 Compat Modes */
+     src: 
+          url('../fonts/fraunces-v26-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/fraunces-v26-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/fraunces-v26-latin-500.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/fraunces-v26-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/fraunces-v26-latin-500.svg#Fraunces') format('svg'); /* Legacy iOS */
+   }
