--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,26 +1,26 @@
-/* fraunces-regular - latin */
+/* livvic-regular - latin */
 @font-face {
-     font-family: 'Fraunces';
+     font-family: 'Livvic';
      font-style: normal;
      font-weight: 400;
-     src: url('../fonts/fraunces-v26-latin-regular.eot'); /* IE9 Compat Modes */
-     src: 
-          url('../fonts/fraunces-v26-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('../fonts/fraunces-v26-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-          url('../fonts/fraunces-v26-latin-regular.woff') format('woff'), /* Modern Browsers */
-          url('../fonts/fraunces-v26-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('../fonts/fraunces-v26-latin-regular.svg#Fraunces') format('svg'); /* Legacy iOS */
+     src: url('../fonts/livvic-v13-latin-regular.eot'); /* IE9 Compat Modes */
+     src:
+          url('../fonts/livvic-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/livvic-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/livvic-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/livvic-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/livvic-v13-latin-regular.svg#Livvic') format('svg'); /* Legacy iOS */
    }
-   /* fraunces-500 - latin */
+   /* livvic-500 - latin */
    @font-face {
-     font-family: 'Fraunces';
+     font-family: 'Livvic';
      font-style: normal;
      font-weight: 500;
-     src: url('../fonts/fraunces-v26-latin-500.eot'); /* IE9 Compat Modes */
+     src: url('../fonts/livvic-v13-latin-500.eot'); /* IE9 Compat Modes */
      src: 
-          url('../fonts/fraunces-v26-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('../fonts/fraunces-v26-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-          url('../fonts/fraunces-v26-latin-500.woff') format('woff'), /* Modern Browsers */
-          url('../fonts/fraunces-v26-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('../fonts/fraunces-v26-latin-500.svg#Fraunces') format('svg'); /* Legacy iOS */
+          url('../fonts/livvic-v13-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/livvic-v13-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/livvic-v13-latin-500.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/livvic-v13-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/livvic-v13-latin-500.svg#Livvic') format('svg'); /* Legacy iOS */
    }
