--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,3 +1,9 @@
+body{
+    position: relative;
+}
+
+
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -15,5 +21,32 @@ ul,ol{
 .container{
     position: relative;
     width: 1440px;
-    height: 3595px;
+    height: 700px;
+    margin: 0 auto;
+    top: 0px;
 }
+
+
+
+button{
+    border: 2px solid #FFFFFF;
+    border-radius: 24px;
+    width: 160px;
+    height: 43px;
+    color: #FFFFFF;
+    background-color: #014E56;
+}
+
+
+.blur-line{
+    display: inline-block; 
+    margin-left: 5px;
+    width: 50px;
+    height: 4px;
+    background-color: #79C8C7;
+    border-radius: 4px;
+
+}
+
+
+    
