--- a/scss/blok/_header.scss
+++ b/scss/blok/_header.scss
@@ -88,7 +88,7 @@
     width: 358px;
     background-repeat: no-repeat;
     background-image: url(../coffi/images/heder2.svg);
-    display: block;
+    margin-top: 350px;
   }
 
 
